syntax = "proto3";

package skillchain.marketplace.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "skillchain/marketplace/v1/params.proto";

option go_package = "skillchain/x/marketplace/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);

  // CreateProfile defines the CreateProfile RPC.
  rpc CreateProfile(MsgCreateProfile) returns (MsgCreateProfileResponse);

  // UpdateProfile defines the UpdateProfile RPC.
  rpc UpdateProfile(MsgUpdateProfile) returns (MsgUpdateProfileResponse);

  // CreateGig defines the CreateGig RPC.
  rpc CreateGig(MsgCreateGig) returns (MsgCreateGigResponse);

  // UpdateGigStatus defines the UpdateGigStatus RPC.
  rpc UpdateGigStatus(MsgUpdateGigStatus) returns (MsgUpdateGigStatusResponse);

  // CreateApplication defines the CreateApplication RPC.
  rpc CreateApplication(MsgCreateApplication) returns (MsgCreateApplicationResponse);

  // UpdateApplication defines the UpdateApplication RPC.
  rpc UpdateApplication(MsgUpdateApplication) returns (MsgUpdateApplicationResponse);

  // DeleteApplication defines the DeleteApplication RPC.
  rpc DeleteApplication(MsgDeleteApplication) returns (MsgDeleteApplicationResponse);

  // CreateContract defines the CreateContract RPC.
  rpc CreateContract(MsgCreateContract) returns (MsgCreateContractResponse);

  // UpdateContract defines the UpdateContract RPC.
  rpc UpdateContract(MsgUpdateContract) returns (MsgUpdateContractResponse);

  // DeleteContract defines the DeleteContract RPC.
  rpc DeleteContract(MsgDeleteContract) returns (MsgDeleteContractResponse);

  // ApplyToGig defines the ApplyToGig RPC.
  rpc ApplyToGig(MsgApplyToGig) returns (MsgApplyToGigResponse);

  // WithdrawApplication defines the WithdrawApplication RPC.
  rpc WithdrawApplication(MsgWithdrawApplication) returns (MsgWithdrawApplicationResponse);

  // AcceptApplication defines the AcceptApplication RPC.
  rpc AcceptApplication(MsgAcceptApplication) returns (MsgAcceptApplicationResponse);

  // RejectApplication defines the RejectApplication RPC.
  rpc RejectApplication(MsgRejectApplication) returns (MsgRejectApplicationResponse);
}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "skillchain/x/marketplace/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.

  // NOTE: All parameters must be supplied.
  Params params = 2 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

// MsgCreateProfile defines the MsgCreateProfile message.
message MsgCreateProfile {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string name = 2;
  string bio = 3;
  repeated string skills = 4;
  uint64 hourly_rate = 5;
}

// MsgCreateProfileResponse defines the MsgCreateProfileResponse message.
message MsgCreateProfileResponse {
  uint64 id = 1;
}

// MsgUpdateProfile defines the MsgUpdateProfile message.
message MsgUpdateProfile {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string name = 2;
  string bio = 3;
  repeated string skills = 4;
  uint64 hourly_rate = 5;
}

// MsgUpdateProfileResponse defines the MsgUpdateProfileResponse message.
message MsgUpdateProfileResponse {}

// MsgCreateGig defines the MsgCreateGig message.
message MsgCreateGig {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string title = 2;
  string description = 3;
  uint64 price = 4;
  string category = 5;
  uint64 delivery_days = 6;
}

// MsgCreateGigResponse defines the MsgCreateGigResponse message.
message MsgCreateGigResponse {
  uint64 id = 1;
}

// MsgUpdateGigStatus defines the MsgUpdateGigStatus message.
message MsgUpdateGigStatus {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 gig_id = 2;
  string status = 3;
}

// MsgUpdateGigStatusResponse defines the MsgUpdateGigStatusResponse message.
message MsgUpdateGigStatusResponse {}

// MsgCreateApplication defines the MsgCreateApplication message.
message MsgCreateApplication {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 gig_id = 2;
  string freelancer = 3;
  string cover_letter = 4;
  uint64 proposed_price = 5;
  uint64 proposed_days = 6;
  string status = 7;
  int64 created_at = 8;
}

// MsgCreateApplicationResponse defines the MsgCreateApplicationResponse message.
message MsgCreateApplicationResponse {
  uint64 id = 1;
}

// MsgUpdateApplication defines the MsgUpdateApplication message.
message MsgUpdateApplication {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 id = 2;
  uint64 gig_id = 3;
  string freelancer = 4;
  string cover_letter = 5;
  uint64 proposed_price = 6;
  uint64 proposed_days = 7;
  string status = 8;
  int64 created_at = 9;
}

// MsgUpdateApplicationResponse defines the MsgUpdateApplicationResponse message.
message MsgUpdateApplicationResponse {}

// MsgDeleteApplication defines the MsgDeleteApplication message.
message MsgDeleteApplication {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 id = 2;
}

// MsgDeleteApplicationResponse defines the MsgDeleteApplicationResponse message.
message MsgDeleteApplicationResponse {}

// MsgCreateContract defines the MsgCreateContract message.
message MsgCreateContract {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 gig_id = 2;
  uint64 application_id = 3;
  string client = 4;
  string freelancer = 5;
  uint64 price = 6;
  int64 delivery_deadline = 7;
  string status = 8;
  int64 created_at = 9;
  int64 completed_at = 10;
}

// MsgCreateContractResponse defines the MsgCreateContractResponse message.
message MsgCreateContractResponse {
  uint64 id = 1;
}

// MsgUpdateContract defines the MsgUpdateContract message.
message MsgUpdateContract {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 id = 2;
  uint64 gig_id = 3;
  uint64 application_id = 4;
  string client = 5;
  string freelancer = 6;
  uint64 price = 7;
  int64 delivery_deadline = 8;
  string status = 9;
  int64 created_at = 10;
  int64 completed_at = 11;
}

// MsgUpdateContractResponse defines the MsgUpdateContractResponse message.
message MsgUpdateContractResponse {}

// MsgDeleteContract defines the MsgDeleteContract message.
message MsgDeleteContract {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 id = 2;
}

// MsgDeleteContractResponse defines the MsgDeleteContractResponse message.
message MsgDeleteContractResponse {}

// MsgApplyToGig defines the MsgApplyToGig message.
message MsgApplyToGig {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 gig_id = 2;
  string cover_letter = 3;
  uint64 proposed_price = 4;
  uint64 proposed_days = 5;
}

// MsgApplyToGigResponse defines the MsgApplyToGigResponse message.
message MsgApplyToGigResponse {}

// MsgWithdrawApplication defines the MsgWithdrawApplication message.
message MsgWithdrawApplication {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 application_id = 2;
}

// MsgWithdrawApplicationResponse defines the MsgWithdrawApplicationResponse message.
message MsgWithdrawApplicationResponse {}

// MsgAcceptApplication defines the MsgAcceptApplication message.
message MsgAcceptApplication {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 application_id = 2;
}

// MsgAcceptApplicationResponse defines the MsgAcceptApplicationResponse message.
message MsgAcceptApplicationResponse {}

// MsgRejectApplication defines the MsgRejectApplication message.
message MsgRejectApplication {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 application_id = 2;
}

// MsgRejectApplicationResponse defines the MsgRejectApplicationResponse message.
message MsgRejectApplicationResponse {}
